--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <input type="text" id="input-bar">
-        <button id="save-btn">SAVE LINK</button>
+        <input type="text" id="input-el">
+        <button id="input-btn">SAVE INPUT</button>
         <ul id="ul-el">
         </ul>
         <script src="index.js"></script>
